# note-to-quote

./: .env.example  README.md  index.html  justfile  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: build_image.yaml
api/: generate-quote.ts
bot/: .env.sample  .gitignore  Dockerfile  README.md  install.sh  post_test.py  pyproject.toml  test_image_generation.py
bot/src/note_to_quote_bot/: main.py
public/js/: stats.js
src/components/: Footer.tsx  NostrInput.tsx  QuoteCanvas.tsx  StyleControls.tsx
src/pages/: Index.tsx
src/utils/: nostrFetcher.ts
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/public/.well-known/: nostr.json
web/src/: index.css
web/src/components/: Footer.tsx  QuoteCanvas.tsx
