[project]
name = "note-to-quote-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nostr-sdk>=0.39.0",
    "aiohttp>=3.9.0",
    "playwright>=1.42.0",
    "Pillow>=10.2.0",
]

[project.scripts]
note-to-quote-bot = "note_to_quote_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
